--- a/messagebling/templates/base.html
+++ b/messagebling/templates/base.html
@@ -31,8 +31,9 @@
         </header>
         <div class="container">
             <div class="row">
-                <div class ="col-lg-8 col-md-10 mx-auto">
-                    <h1>asdasdasdasdsa</h1>
+                 
+                <div class ="col-lg-12 col-md-10 mx-auto">
+                    {% block content %}{% endblock %}
                 </div>
             </div>
         </div>
