--- a/messagebling/templates/inbox/message_form.html
+++ b/messagebling/templates/inbox/message_form.html
@@ -6,7 +6,7 @@
         <div class="form-group row">
             <label for="subject" class="col-sm-2 col-form-label">Temat</label>
             <div class="col-sm-10">
-                <input type="text" name='subject' class="form-control" id="subject" placeholder="Temat">
+                <input name='subject' class="form-control" id="subject" placeholder="Temat">
             </div>
         </div>
         <div class="form-group row">
@@ -22,7 +22,7 @@
         <div class="form-group row">
             <label for="body" class="col-sm-2 col-form-label">Treść</label>
             <div class="col-sm-10">
-                <input type="textarea" name='body' class="form-control" id="body" placeholder="Treść">
+                <input name='body' class="form-control" id="body" placeholder="Treść">
             </div>
         </div>
         <div class="form-group row">
