--- a/messagebling/templates/inbox/messages.html
+++ b/messagebling/templates/inbox/messages.html
@@ -1,10 +1,10 @@
 <table class="table">
-        {% for message in messages %}
-            <tbody>
-                <tr>
-                    <td><a href={% url 'message' pk=message.pk %}>{{ message.subject }}</a></td>
-                    <td><a href={% url 'message' pk=message.pk %}>{{ message.date_created}}</a></td>
-                </tr>
-            </tbody>
-        {% endfor %}
-    </table>
+    {% for message in messages %}
+        <tbody>
+            <tr>
+                <td><a data-toggle='modal' data-target=#modal href={% url 'message' pk=message.pk %}>{{ message.subject }}</a></td>
+                <td><a data-toggle='modal' data-target=#modal href={% url 'message' pk=message.pk %}>{{ message.date_created}}</a></td>
+            </tr>
+        </tbody>
+    {% endfor %}
+</table>
