--- a/messagebling/templates/inbox/messages.html
+++ b/messagebling/templates/inbox/messages.html
@@ -2,8 +2,8 @@
     {% for message in messages %}
         <tbody>
             <tr>
-                <td><a data-toggle='modal' data-target=#modal href={% url 'message' pk=message.pk %}>{{ message.subject }}</a></td>
-                <td><a data-toggle='modal' data-target=#modal href={% url 'message' pk=message.pk %}>{{ message.date_created}}</a></td>
+                <td><a href={% url 'message' pk=message.pk %}>{{ message.subject }}</a></td>
+                <td><a href={% url 'message' pk=message.pk %}>{{ message.date_created}}</a></td>
             </tr>
         </tbody>
     {% endfor %}
