--- a/messagebling/templates/inbox/inbox.html
+++ b/messagebling/templates/inbox/inbox.html
@@ -17,6 +17,7 @@
                         {% include "inbox/messages.html" with messages=sent_messages %}
                     </div>
                 </div>
+		<a href="/inbox/messages" class="btn btn-primary">Nowa wiadomość</a>
             </div>
         </div>
     </div>
