--- a/messagebling/templates/base.html
+++ b/messagebling/templates/base.html
@@ -11,20 +11,32 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script>
-                $(document).ready(function(){
-                    $("#recivers").autocomplete({
-                        source: "/api/users/"
-                    });
-                });
                 $(document).ready(function() {
-                    $.fn.select2.defaults.set("theme", "bootstrap");
                     $('#recivers').select2({
                         ajax: {
-                            url: "/api/users/"
-                        }
+                            url: "/api/users/",
+                            dataType: 'json',
+                            type: 'GET',
+                            data: function (params) {
+                                var queryParameters = {
+                                    q: params.term
+                                }
+                            return queryParameters;
+                            },
+                            processResults: function (data) {
+                                    return {
+                                        results: $.map(data, function (item) {
+                                            return {
+                                                text: item.username,
+                                                id: item.pk
+                                            }
+                                        })
+                                    }
+                                }
+                            }   
                     });
                 });
             </script>
@@ -66,5 +78,5 @@
                 </div>
             </div>
         </footer>
-    </body>    
+    </body> 
 </html>
