--- a/messagebling/templates/inbox/inbox.html
+++ b/messagebling/templates/inbox/inbox.html
@@ -5,19 +5,19 @@
             <div class="col">
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                        <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Odebrane</a>
+                        <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="false">Odebrane</a>
                         <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Wysłane</a>
                     </div>
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                        {% include "inbox/messages.html" with messages=recived_messages %}
+                        {% include "inbox/messages.html" with messages=recived_messages sent=False %}
                     </div>
                     <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                        {% include "inbox/messages.html" with messages=sent_messages %}
+                        {% include "inbox/messages.html" with messages=sent_messages sent=True %}
                     </div>
                 </div>
-		<a href="/inbox/messages" class="btn btn-primary">Nowa wiadomość</a>
+        <a href="/inbox/messages" class="btn btn-primary">Nowa wiadomość</a>
             </div>
         </div>
     </div>
