--- a/messagebling/templates/inbox/message_form.html
+++ b/messagebling/templates/inbox/message_form.html
@@ -13,6 +13,15 @@
                 <input  value="RE: {{reply.subject}}" name='subject' class="form-control" id="subject" placeholder="Temat" />
             </div>
         </div>
+        <div class="form-group row">
+            <label for="recivers" class="col-sm-2 col-form-label">Odbiorca</label>
+            <div class="col-sm-10">
+                <select name='recivers' class='form-control' id='recivers' multiple='multiple' placeholder="Odbiorca">
+                        <option selected="selected" value={{reply.sender.id}}>{{reply.sender}}</option>
+                </select>
+                
+            </div>
+        </div>   
         {% else %}
         <div class="form-group row">
                 <label for="subject" class="col-sm-2 col-form-label">Temat</label>
@@ -20,22 +29,14 @@
                     <input name='subject' class="form-control" id="subject" placeholder="Temat" />
                 </div>
             </div>
-        {% endif %}
-        {% if reply %}
-        <div class="form-group row">
-            <label for="recivers" class="col-sm-2 col-form-label">Odbiorca</label>
-            <div class="col-sm-10">
-                <input value="{{reply.sender}}" placeholder="Odbiorca" type='text' name='recivers' class='form-control' id='recivers' disabled/>
+            <div class="form-group row">
+                <label for="recivers" class="col-sm-2 col-form-label">Odbiorca</label>
+                <div class="col-sm-10">
+                    <select name='recivers' class='form-control' id='recivers' multiple='multiple' placeholder="Odbiorca">
+                        </select>
+                </div>
+            </input>
             </div>
-        </div>                
-        {% else %}
-        <div class="form-group row">
-            <label for="recivers" class="col-sm-2 col-form-label">Odbiorca</label>
-            <select id="recivers" class="form-control" name="recivers" multiple="multiple">
-                    <option value="AL">Alabama</option>
-                    <option value="WY">Wyoming</option>
-            </select>
-        </div>
         {% endif %}
         {% if resend %}
         <div class="form-group row">
