--- a/messagebling/templates/authentication/login.html
+++ b/messagebling/templates/authentication/login.html
@@ -13,11 +13,14 @@
     <body> 
         <div class="container">
             <div class='absolute-center row'>
+                <div class="col">
+                        <h1 class='text-center'>Zaloguj się</h1>
+                </div>
                 <form class="form-signin" method="post" action="{% url 'login' %}">
                     {% csrf_token %}
                     <input type="username" name="username" id="inputEmail" class="form-control" placeholder="Login" required="" autofocus="">
-                    <input type="password" name="password" id="inputPassword", class="form-control" placeholder="Password" required="" autofocus="">
-                    <button class="btn btn-lg btn-primary btn-block login-button-margin" type="submit">Sign in</button>
+                    <input type="password" name="password" id="inputPassword", class="form-control" placeholder="Hasło" required="" autofocus="">
+                    <button class="btn btn-lg btn-primary btn-block login-button-margin" type="submit">Zaloguj się </button>
                 </form>
             </div>
         </div>
