--- a/messagebling/templates/inbox/message_details.html
+++ b/messagebling/templates/inbox/message_details.html
@@ -1,25 +1,28 @@
 {% extends 'inbox/inbox.html' %}
 {% block content %}
-<div class='container'>
     <div class="card">
         <h5 class="card-header">Wiadomość od {{instance.sender}}</h5>
-        <div class="card-body">
-            <h5 class="card-title">{{instance.subject}}</h5>
-            <p id='body' class="card-text">{{instance.body}}</p>
-            <p>załączniki:</p>
-            {% for attach in attachment %}
-            <a href="{{ attach.file_object.url}}">{{attach.file_object.name}}</a>
-            {% endfor %}
-            <div class="col">
-            <a href="{{instance.pk}}/reply" class="btn btn-primary">Odpowiedz do wszystkich</a>
-            <a href="{{instance.pk}}/resend" class='btn btn-primary'>Prześlij dalej</a>
-            {% if sent == True %}
-            <a href={% url 'messagesenderdelete' pk=instance.pk %} class='btn btn-primary'>Usuń wiadomość</a>
-            {% else %}
-            <a href={% url 'messagedelete' pk=instance.pk %} class='btn btn-primary'>Usuń wiadomość</a>
-            {% endif %}
+                    <h3 class="card-title text-center">{{instance.subject}}</h3>
+                <div class="card-block message-text ">
+                    <blockquote id='body' class="card-text">{{instance.body}}</blockquote>
+                    {% if attachment %}
+                        <p>załączniki:</p>
+                        {% for attach in attachment %}
+                            <a href="{{ attach.file_object.url}}">{{attach.file_object.name}}</a>
+                        {% endfor %}
+                    {% else %}
+                        <p></p>
+                    {% endif %}
+
+                </div>
             </div>
-        </div>
+                <a href="{{instance.pk}}/reply" class="btn btn-primary">Odpowiedz</a>
+                <a href="{{instance.pk}}/resend" class='btn btn-primary'>Prześlij dalej</a>
+                {% if sent == True %}
+                <a href={% url 'messagesenderdelete' pk=instance.pk %} class='btn btn-primary'>Usuń wiadomość</a>
+                {% else %}
+                <a href={% url 'messagedelete' pk=instance.pk %} class='btn btn-primary'>Usuń wiadomość</a>
+                {% endif %}
     </div>
-</div>
+
 {% endblock %}
